dt-bindings: connector: usb: Describe DP altmode reverse orientation
Some USB type-c designs reverse the DP lanes going to the connector so
that 2 lanes of a DP controller go to one connector while the other 2
lanes go to a different connector. This property indicates that the DP
controller should reverse the lanes for this usb-c-connector.

Signed-off-by: Stephen Boyd <swboyd@chromium.org>

--- a/Documentation/devicetree/bindings/connector/usb-connector.yaml
+++ b/Documentation/devicetree/bindings/connector/usb-connector.yaml
@@ -178,6 +178,9 @@ properties:
           vdo:
             $ref: /schemas/types.yaml#/definitions/uint32
             description: VDO returned by Discover Modes USB PD command.
+          orientation-reversed:
+            type: boolean
+            description: Whether the DP altmode orientation is reversed.
 
   port:
     $ref: /schemas/graph.yaml#/properties/port
